--- a/public/recent-winners.html
+++ b/public/recent-winners.html
@@ -12,6 +12,7 @@
   <body>
     <div class="row">
       <div class="col">
+        <!-- Navigation Starts -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <button
                 class="navbar-toggler"
@@ -40,8 +41,10 @@
                 </ul>
               </div>
         </nav>
+        <!-- Navigation Ends -->
         </div>
       </div>
+      <!-- App Starts -->
     <div id="app">
       <div class="page">
         <div class="row">
@@ -115,7 +118,7 @@
           </div>
       </div>
     </div>
-
+  <!-- App Ends -->
     <script src="assets/bootstrap.js"></script>
     <script src="assets/vue.js"></script>
 
