--- a/public/recent-winners.html
+++ b/public/recent-winners.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="card-body">
                   <form class="form-inline">
-                    <div class="alert alert-danger" role="alert" v-if="error != ''">
+                  <div class="alert alert-danger" role="alert" v-if="error != ''">
                       {{ error }}
                     </div>
                     <div class="form-group">
@@ -153,7 +153,9 @@
               }catch(e){
                 console.log(e);
                 console.log("Incorrect file name");
-                this.error = 'Incorrect file name';
+                if(!this.load_recent_filename.endsWith(".json")){
+                  this.error = 'Incorrect file name';
+                }
               }
             }else{
               this.error = 'Input field should not be empty'
